# mj_viser

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_launch.py  custom_panel.py  gui_demo.py  sync_mode.py
src/mj_viser/: geom_builders.py  gui.py  mesh_utils.py  scene.py  transforms.py  viewer.py
tests/: test_mesh_utils.py  test_transforms.py
