[project]
name = "mj-viser"
version = "0.1.0"
description = "Web-based MuJoCo viewer using Viser"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "mujoco>=3.0",
    "viser>=0.2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.uv.sources]
mujoco-menagerie = { git = "https://github.com/google-deepmind/mujoco_menagerie.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mj_viser"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
